--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/dtan4/namesh/issues"
   },
-  "homepage": "https://github.com/dtan4/namesh#readme"
+  "homepage": "https://github.com/dtan4/namesh#readme",
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "espower-coffee": "^1.0.0",
+    "mocha": "^2.3.3",
+    "power-assert": "^1.1.0"
+  }
 }
