--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "espower-coffee": "^1.0.0",
+    "gulp": "^3.9.0",
+    "gulp-mocha": "^2.1.3",
     "mocha": "^2.3.3",
     "power-assert": "^1.1.0"
   }
