--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "url": "https://github.com/dtan4/namesh/issues"
   },
   "homepage": "https://github.com/dtan4/namesh#readme",
+  "dependencies": {
+    "coffee-script": "^1.10.0"
+  },
   "devDependencies": {
-    "coffee-script": "^1.10.0",
     "espower-coffee": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
