--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "homepage": "https://github.com/dtan4/namesh#readme",
   "dependencies": {
-    "coffee-script": "^1.10.0"
+    "bluebird": "^2.10.2",
+    "coffee-script": "^1.10.0",
+    "request": "^2.65.0"
   },
   "devDependencies": {
     "espower-coffee": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
     "mocha": "^2.3.3",
+    "nock": "^2.15.0",
     "power-assert": "^1.1.0"
   }
 }
